--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
 # 页面标题
-VUE_APP_TITLE = 运城经济开发区英伦罗孚
+VUE_APP_TITLE = 运城英伦罗孚后台管理系统
 
 # 开发环境配置
 ENV = 'development'
 
-# 运城经济开发区英伦罗孚后台管理系统/开发环境
+# 运城英伦罗孚后台管理系统/开发环境
 VUE_APP_BASE_API = '/dev-api'
 
 # 路由懒加载
