--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ruoyi",
   "version": "3.8.9",
-  "description": "运城经济开发区英伦罗孚",
-  "author": "运城经济开发区英伦罗孚",
+  "description": "运城英伦罗孚后台管理系统",
+  "author": "运城英伦罗孚后台管理系统",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
